# sas_graph_code_conversion

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: briefing.md  result-register.md  task-track.md
config/: research_domain.yaml
docs/: proposal.md
docs/design/: reference_graph_schema.md
docs/requirements/: srs.md
experiments/: 001_context_generation.md  context_gen_v0.py  test_context_gen.py
src/sgcc/: __init__.py  cli.py
src/sgcc/graph/: __init__.py  models.py  schema.py  store.py
tests/: test_graph_model.py
tests/reference_graphs/: pilot_survey_pipeline.json
